Added gradle tasks for jpackage, added icons, changed to JDK 12